--- a/front/src/index.css
+++ b/front/src/index.css
@@ -3,15 +3,15 @@
 @tailwind utilities;
 
 body::-webkit-scrollbar {
-    width: 8px;               /* width of the entire scrollbar */
+    width: 6px;               /* width of the entire scrollbar */
   }
   
   body::-webkit-scrollbar-track {
-    background: rgb(17 24 39 / var(--tw-bg-opacity));       /* color of the tracking area */
+    background: rgb(31 41 55 );       /* color of the tracking area */
   }
   
   body::-webkit-scrollbar-thumb {
-    background-color: whitesmoke;    /* color of the scroll thumb */
+    background-color: white;   /* color of the scroll thumb */
     border-radius: 20px;       /* roundness of the scroll thumb */
-    border: 2px solid white;  /* creates padding around scroll thumb */
+    border: 1px solid white;  /* creates padding around scroll thumb */
   }
